--- a/catalog.yml
+++ b/catalog.yml
@@ -1,6 +1,22 @@
 services:
   # define a simple service offering
   # for field documentation see https://github.com/openservicebrokerapi/servicebroker/blob/v2.15/spec.md#service-offering-object
+  - id: d222de79-1c61-432c-a927-e7599239be63
+    name: "vm-created-by-deployment-manager"
+    type: compute.v1.instance
+    properties:
+      zone: us-central1-a
+      machineType: zones/us-central1-a/machineTypes/n1-standard-1
+      disks:
+      - deviceName: boot
+        type: PERSISTENT
+        boot: true
+        autoDelete: true
+        initializeParams:
+          sourceImage: projects/debian-cloud/global/images/family/debian-11
+      networkInterfaces:
+      - network: global/networks/default
+  
   - id: 97ffb5b3-d38f-4032-99fb-2eca8e850529 # this uuid was randomly generated using "unipipe generate uuid"
     name: "Webservice-api"
     description: "This service spins up a webservice in aws."
